# investing-platform

./: .env.example  .gitignore  README.md  main.py  requirements.txt
configs/: example_config.yaml  testing_mock_config.yaml
data/filesystem-connectors/: connectors.json
data/processed/: sample_engineered_features.csv
data/scored/: sample_rankings.csv
docs/: bloomberg-killers.md  dashboard-information-architecture-spec.md  edgar-qwen36-local-intelligence-architecture-spec.md  edgar-section-xbrl-citation-upgrade-spec.md  edgar-tool-simplification-and-cache-spec.md  frontend-modularity-boundary.md  gfis-market-data-api-terms-and-conditions-acknowledgement-form.md  ibkr-fundamentals-plan.md  ibkr-market-data-notes.md  options-workstation-plan.md  sidebar-asset-taxonomy-spec.md
frontend/: index.html  package-lock.json  package.json  playwright.config.mjs  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/scripts/: phase1-self-test.mjs
frontend/src/: App.tsx  index.css  main.tsx  plaid.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: activate.sh  bootstrap.sh  dev_dashboard.sh  download_qwen_model.sh  fetch_nvda_chain.py  install_omlx.sh  parse_positions.py  sec-download  start_backend.sh  start_frontend.sh  start_omlx.sh  start_tauri.sh  test_ib_gateway.py  venv.sh
tests/: test_edgar_filing_sections.py  test_edgar_intelligence.py  test_edgar_metadata_cache.py  test_edgar_resolver.py  test_edgar_routes.py  test_edgar_service.py  test_edgar_xbrl_facts.py  test_omlx_client.py
(+222 files in other folders)
